--- a/public/base.css
+++ b/public/base.css
@@ -1,7 +1,18 @@
-.main {
-  height: 100%;
-}
-
 #navbar {
   background-color: #D3D3D3;
+}
+
+#main {
+  height: 100%;
+  background: url();
+  margin-top: 50px;
+}
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: center;
 }
