--- a/public/base.css
+++ b/public/base.css
@@ -5,14 +5,16 @@ html {
 body {
   height: 100%;
 }
+
 #navbar {
   background-color: #D3D3D3;
+  font-size: 17px;
 }
 
 #main {
   height: 100%;
   background: url();
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 #main-color{
