--- a/public/base.css
+++ b/public/base.css
@@ -9,9 +9,14 @@ body {
 #navbar {
   background-color: #D3D3D3;
   font-size: 17px;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
 }
 
-#main {
+#intro{
   height: 100%;
   background: url();
   margin-top: 100px;
